# ya_getopt

./: CMakeLists.txt  ya_getopt.c  ya_getopt.h
test/: getopt_test.c
